# server.js
@@ -1,87 +1,105 @@
 /**
  * Librerias
  */
-const express = require('express');
-const bodyParser = require('body-parser');
-const app = express();
-
+const express = require('express')
+const bodyParser = require('body-parser')
+const app = express()
+const http = require('http').Server(app)
+const io = require('socket.io')(http)
 
 /**
  * Clases
  */ 
-const conf = require('./conf');
-const dispositivos = require('./dispositivos');
-const listener = require('./udp-listener')(onPacket);
-const sender = require('./udp-sender');
+const conf = require('./conf')
+const dispositivos = require('./dispositivos')
+const listener = require('./udp-listener')(onPacket)
+const sender = require('./udp-sender')
+const storage = require('./storage')(onNewDispositivoSaved)
 /**
  * Constantes
  */
-const URI = '/dispositivos';
-const ERROR_HEADER = 'Error-Message';
-const PORT = conf.port;
+const ERROR_HEADER = 'Error-Message'
+const PORT = conf.port
 
-app.use(bodyParser.json());
-app.use(Logger);
+app.use(bodyParser.json())
+// app.use(Logger)
 
 function onPacket(data,PORT){
-	console.log('UDP => ',data);
+	console.log('UDP => ',data)
 	try{
-		const disp = dispositivos.get(PORT);
+		const disp = dispositivos.get(PORT)
 		disp.subscribers.forEach(function(IP) {
 			copyAndSend(data,IP,PORT)
-		});
+		})
+		storage.buffer(data,disp.mac)
 	}catch(err){
-		console.error(err);
+		console.error(err)
 	}
 }
 
-function copyAndSend(data,ip,port){
-	const buffer = Buffer.from(data);
-	sender.send(data,port,ip);
-	console.log('Se envio a ',ip);
+function onNewDispositivoSaved(dispositivo){
+	io.sockets.emit('nuevo',dispositivo)
 }
 
-app.use(express.static(__dirname + '/swagger'));
+function copyAndSend(data,ip,port){
+	const buffer = Buffer.from(data)
+	sender.send(data,port,ip)
+	console.log('Se envio a ',ip)
+}
 
-app.get(URI, function (req, res) {
-	res.send(dispositivos.get());
-});
+app.use('/api',express.static(__dirname + '/swagger'))
+app.use('/bower_components',express.static(__dirname + '/bower_components'))
+app.use('/',express.static(__dirname + '/public'))
 
-app.post(URI, function (req, res) {
-	const puerto = dispositivos.add(req.body);
-	listener.listen(puerto);
-	res.send(String(puerto));
-});
+app.get('/dispositivos', function (req, res) {
+	res.send(dispositivos.get())
+})
 
-app.put(URI,function(req,res){
-	dispositivos.subscribe(req.body.puerto,req.body.ip);
-	const d = dispositivos.get(req.body.puerto);
-	res.send(String(d.sample_rate));
-});
+app.post('/dispositivos', function (req, res) {
+	const disp = dispositivos.add(req.body)
+	storage.init(disp)
+	listener.listen(disp.puerto)
+	res.send(String(disp.puerto))
+})
 
-app.delete(URI+'/:puerto',function(req,res){
-	const puerto = req.params.puerto;
-	dispositivos.remove(puerto);
-	res.status(200).send(null);
-});
+app.put('/dispositivos',function(req,res){
+	dispositivos.subscribe(req.body.mac,req.body.ip)
+	const d = dispositivos.get(req.body.puerto)
+	res.send(String(d.sample_rate))
+})
 
-app.get('/',function(req,res){
-	res.sendFile(__dirname+'/swagger/index.html')
-});
+app.delete('/dispositivos/:mac',function(req,res){
+	const mac = req.params.mac
+	dispositivos.remove(mac)
+	storage.clear(mac)
+	res.status(200).send(null)
+})
 
-app.use(ErrorHandler);
+app.get('/audios',function(req,res){
+	storage.getAll(function(lista){
+		res.status(200).send(lista)
+	})
+})
+
+app.get('/audios/:mac',function(req,res){
+	const mac = req.params.mac
+	storage.pipeAudioStream(res,mac)
+})
+
+
+app.use(ErrorHandler)
 
 function Logger(req,res,next){
-	console.log('Request: ',req.method,req.url);
-	next();
+	console.log('Request: ',req.method,req.url)
+	next()
 }
 function ErrorHandler(err,req,res,next){
-	console.log('Interceptando error: ',err);
-	res.set(ERROR_HEADER,err);
-	res.status(500);
-	res.send(null);
+	console.log('Interceptando error: ',err)
+	res.set(ERROR_HEADER,err)
+	res.status(500)
+	res.send(null)
 }
 
-app.listen(80,function(){
-	console.log('Server corriendo http://localhost/');
-});
+http.listen(80,function(){
+	console.log('Server corriendo http://localhost/')
+})
